Cambios en iconos de acceso directo, busqueda de alumno permite navegacion con teclado, inscripciones devuelta de activos, se quita navegador del buscador de disciplina, se pone mes y año vigente, funciona observaciones